--- a/BlazorTerminal.ComponentLib/TerminalControl.razor.css
+++ b/BlazorTerminal.ComponentLib/TerminalControl.razor.css
@@ -1,3 +1,16 @@
 .blazor-terminal {
     font-family: monospace;
+    background-color: #000;
+    color: #fff;
+    padding: 4px;
+    display: inline-block;
+}
+
+.terminal-row {
+    white-space: pre;
+    line-height: 1.2;
+}
+
+.terminal-cell {
+    display: inline-block;
 }
