--- a/BlazorTerminal.TestApp/Pages/Index.razor
+++ b/BlazorTerminal.TestApp/Pages/Index.razor
@@ -2,4 +2,17 @@
 
 <h3>Test Terminal</h3>
 
-<TerminalControl />
+<TerminalControl @ref="terminal" />
+
+@code {
+    private TerminalControl? terminal;
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender && terminal is not null)
+        {
+            terminal.WriteLine("Hello from TestApp!");
+            terminal.Write("> ");
+        }
+    }
+}
